--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <title>Delano Powell</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="favicon.ico?v=2">
+  <link rel="stylesheet" href="static/css/styles.css">
+  <link rel="icon" href="static/images/favicon.ico?v=2">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
@@ -13,41 +12,41 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="static/images/cloud.png" alt="cloud-img">
     <h1>I'm Delano</h1>
     <h2>a <span class="pro">pro</span>grammer.</h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="static/images/cloud.png" alt="cloud-img">
+    <img src="static/images/mountain.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img class="delano-png" src="images/delano.png" alt="">
+      <img class="delano-png" src="static/images/delano.png" alt="">
       <h2>Hello.</h2>
-      <p>I started to relearn to code in August of 2022 because I wanted to dive further into the world of programming.</p>
-      <p>So far, I've created projects in Python and continue to expand on my knowledge from my Information Systems degree and a self-paced bootcamp!</p>
+      <p>I started to re-hone my coding skills in August 2022 because I wanted to dive further into the world of programming.</p>
+      <p>So far, I've created projects in Python and continue to expand on my knowledge from my Information Systems degree and Udemy bootcamp!</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="coding-png" src="images/coding.png" alt="">
+        <img class="coding-png" src="static/images/coding.png" alt="">
         <h3>Python</h3>
         <p>Through various project work and self-teaching, I've gained an intermediate level of understanding of coding with the language.</p>
-        <p>Check my GitHub link below to see some of the things I've done.</p>
+        <p>Check my GitHub link below to see some of the things I've created!</p>
       </div>
       <div class="skill-row">
-        <img class="consulting-png" src="images/consulting.png" alt="">
+        <img class="consulting-png" src="static/images/consulting.png" alt="">
         <h3>Consulting</h3>
-        <p>I can effectively communicate with internal teams and customers around technical topics. Combining the comunicative and technical accumen from my current role as a technical consultant, I am confident in my abilities to both convey and recieve ideas from stakeholders on both sides of the technical fence.</p>
-        <!-- <p class="consulting-skill-desc">Combining the comunicative and technical accumen from my current role as a technical consultant, I am confident in my abilities to both convey and recieve ideas from stakeholders on both sides of the technical fence.</p> -->
+        <p>I can effectively communicate with internal teams and customers around technical topics. Combining the communicative and technical acumen from my current role as a technical consultant, I am confident in my abilities to both convey and receive ideas from stakeholders on either side of the fence.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>If you have a passion for communicating through technical conversations and developing early-career programmers.</h3>
-      <p>Do you enjoy developing the early career of a programmer who's integrity is as strong as his communication skills? Let's get together and see what avenues we can discover together!</p>
+      <p>Do you enjoy developing the early career of a programmer whose integrity is as strong as his communication skills? </p>
+      <p>Let's get in contact and see what we can discover together!</p>
       <a class="btn" href="mailto:del.pow1@gmail.com">CONTACT ME</a>
     </div>
   </div>
@@ -66,5 +65,4 @@
   </div>
 
 </body>
-
 </html>
